@@ -71,6 +71,7 @@ typedef struct syncres {
 /* Record of a persistent search */
 typedef struct syncops {
 	struct syncops *s_next;
+	struct syncprov_info_t *s_si;
 	struct berval	s_base;		/* ndn of search base */
 	ID		s_eid;		/* entryID of search base */
 	Operation	*s_op;		/* search op */
@@ -796,7 +797,7 @@ static void free_resinfo( syncres *sr )
 }
 
 static int
-syncprov_free_syncop( syncops *so )
+syncprov_free_syncop( syncops *so, int unlink )
 {
 	syncres *sr, *srnext;
 	GroupAssertion *ga, *gnext;
@@ -811,6 +812,19 @@ syncprov_free_syncop( syncops *so )
 	}
 	op = so->s_op;
 	ldap_pvt_thread_mutex_unlock( &so->s_mutex );
+
+	if ( unlink ) {
+		syncops **sop;
+		ldap_pvt_thread_mutex_lock( &so->s_si->si_ops_mutex );
+		for ( sop = &so->s_si->si_ops; *sop; sop = &(*sop)->s_next ) {
+			if ( *sop == so ) {
+				*sop = so->s_next;
+				so->s_next = so; /* LY: safely mark it as abandoned */
+				break;
+			}
+		}
+		ldap_pvt_thread_mutex_unlock( &so->s_si->si_ops_mutex );
+	}
 
 	if ( so->s_flags & PS_IS_DETACHED ) {
 		filter_free( op->ors_filter );
@@ -989,7 +1003,7 @@ syncprov_qtask( void *ctx, void *arg )
 	/* ignore result */
 
 	/* decrement use count... */
-	syncprov_free_syncop( so );
+	syncprov_free_syncop( so, 1 );
 
 	return NULL;
 }
@@ -1120,7 +1134,7 @@ syncprov_drop_psearch( syncops *so, int lock )
 		assert(so->s_next == so);
 		so->s_op = NULL;
 	}
-	return syncprov_free_syncop( so );
+	return syncprov_free_syncop( so, 0 );
 }
 
 static int
@@ -1356,7 +1370,7 @@ syncprov_matchops( Operation *op, opcookie *opc, int saveit )
 			 * with saveit == TRUE
 			 */
 			snext = ss->s_next;
-			if ( syncprov_free_syncop( ss ) ) {
+			if ( syncprov_free_syncop( ss, 0 ) ) {
 				*pss = snext;
 				gonext = 0;
 			}
@@ -1401,7 +1415,7 @@ syncprov_op_cleanup( Operation *op, SlapReply *rs )
 
 	for (sm = opc->smatches; sm; sm=snext) {
 		snext = sm->sm_next;
-		syncprov_free_syncop( sm->sm_op );
+		syncprov_free_syncop( sm->sm_op, 1 );
 		op->o_tmpfree( sm, op->o_tmpmemctx );
 	}
 
@@ -2556,6 +2570,7 @@ syncprov_op_search( Operation *op, SlapReply *rs )
 			ldap_pvt_thread_mutex_lock( &si->si_ops_mutex );
 		}
 		sop->s_next = si->si_ops;
+		sop->s_si = si;
 		si->si_ops = sop;
 		ldap_pvt_thread_mutex_unlock( &si->si_ops_mutex );
 	}
