@@ -25,6 +25,7 @@ OpenLDAP 2.4.41 Engineering
 	Fixed slapo-syncprov synprov_matchops usage of test_filter (ITS#8013)
 	Fixed slapo-syncprov segfault on disconnect/abandon (ITS#5452,ITS#8012)
 	Fixed slapo-syncprov memory leak (ITS#8039)
+	Fixed slapo-syncprov segfault on disconnect/abandon (ITS#8043)
 	Build Environment
 		Enhanced contrib modules build paths (ITS#7782)
 		Fixed contrib/autogroup internal operation identity (ITS#8006)
